--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wazo-call-logs-client (1.0-2) xivo-dev; urgency=medium
+
+  * s/xivo-call-logs/wazo-call-logs/
+
+ -- Wazo Maintainers <dev@wazo.community>  Tue, 20 Jun 2017 15:03:47 -0400
+
 xivo-call-logs-client (1.0-1) xivo-dev; urgency=low
 
   * Initial release.
